# graphes-client

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  config.example.yaml  pyproject.toml
graphes/cli/: commands.py  context.py  main.py  register.py  specs.py
graphes/core/: config.py  graphes.py
graphes/models/: __init__.py  esquery.py
scripts/: esquery_showcase.py  esquery_showcase_cli.sh
